--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -177,14 +177,25 @@
               <ul class="list-xl">
                 <li>
                   <p>
-                    Las aplicaciones multimedia en la educación han revolucionado la forma en que se imparte y se recibe el conocimiento. Algunos ejemplos incluyen:
-                    Plataformas de aprendizaje en línea: Como Coursera, Khan Academy y Udemy, que ofrecen cursos interactivos con videos, quizzes y foros de discusión.
-                    Software educativo: Programas como Duolingo para aprender idiomas o GeoGebra para matemáticas.
-                    Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios interactivos para facilitar el aprendizaje.</p>
-                  <p>En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. 
-                    Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido 
-                    interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo. 
+                   El desarrollo de aplicaciones multimedia es un proceso complejo que involucra la integración 
+                    de diferentes tipos de medios (texto, imágenes, sonido, video, etc.) para crear una experiencia 
+                    interactiva o informativa. Para que una aplicación multimedia sea efectiva y cumpla su propósito, 
+                    debe reunir una serie de características clave en su desarrollo. Estas características no solo afectan 
+                    la funcionalidad de la aplicación, sino también la calidad de la experiencia que ofrece al usuario.
+                  </p>
+                  <p>
+                    <h4>1. Interactividad</h4>
+                    La interactividad es una de las características más distintivas de las aplicaciones multimedia. A través de 
+                    la interacción del usuario con el contenido, se puede personalizar la experiencia.
+                    <h5>Ejemplos:</h5> Selección de opciones, navegación a través de menús, juegos interactivos.
+                    <h5>Desarrollo:</h5> Se deben implementar interfaces de usuario (UI) que permitan una interacción fácil e intuitiva. Las aplicaciones pueden utilizar entradas como clics, toques, gestos, movimientos, entre otros.
                 </p>
+                  <p>
+                    <h4>2. Integración de múltiples tipos de medios</h4>
+                    Las aplicaciones multimedia combinan varios tipos de medios como texto, imágenes, audio, video y animación. El desarrollo debe permitir la integración fluida de estos medios.
+                    <h5>Ejemplos:</h5> Una aplicación educativa que utilice texto para instrucciones, imágenes para ilustraciones, videos para demostraciones y sonido para explicaciones.
+                    <h5>Desarrollo:</h5> Los desarrolladores deben utilizar tecnologías que soporten la integración de diferentes tipos de medios (HTML5, Flash, JavaScript, etc.). También es esencial gestionar la sincronización de los diferentes tipos de contenido para una experiencia coherente.
+                  </p>
                 </li>
               </ul>
             </div>
@@ -202,10 +213,22 @@
                             </div>
                             <div class="col-md-6">
                                 <p>
-                                    En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo.
-                                  Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido 
-                                  interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo.
-                                </p>
+                            <h4>3. Accesibilidad</h4>
+                            Una aplicación multimedia debe ser accesible para todos los usuarios, incluidos aquellos con discapacidades.
+                                  Esto implica que debe ser fácil de usar para personas con problemas visuales, auditivos, motrices, entre otros.
+                            <h5>Ejemplos:</h5> Subtítulos en videos, texto alternativo para imágenes, opciones de control por voz.
+                            <h5>Desarrollo:</h5> Se deben considerar estándares de accesibilidad, como la WCAG (Web Content Accessibility Guidelines), 
+                            para garantizar que las aplicaciones sean accesibles. Además, se deben ofrecer alternativas para aquellos que no pueden 
+                            interactuar de la manera convencional (por ejemplo, usando teclados, ratones o pantallas táctiles).
+                            </p>
+                              <p>
+                                <h4>4. Multiplataforma</h4>
+                                Las aplicaciones multimedia deben ser capaces de funcionar correctamente en diferentes plataformas y dispositivos, ya
+                                sea un ordenador de escritorio, una tableta, un teléfono móvil o incluso en dispositivos de realidad virtual.
+                                <h5>Ejemplos:</h5> Aplicaciones que se ejecutan en Android, iOS, Windows, y otros sistemas operativos.
+                                <h5>Desarrollo:</h5> Los desarrolladores deben optar por tecnologías multiplataforma o crear versiones específicas
+                                de la aplicación para cada plataforma. Esto puede implicar el uso de frameworks como React Native, Flutter, o Unity para aplicaciones de juegos y multimedia.
+                              </p>
                             </div>
                         </div>
                     </div>
