--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -220,7 +220,30 @@
                             para garantizar que las aplicaciones sean accesibles. Además, se deben ofrecer alternativas para aquellos que no pueden 
                             interactuar de la manera convencional (por ejemplo, usando teclados, ratones o pantallas táctiles).
                             </p>
-                              <p>
+                              
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+              <!-- Base de imagenes lateral derecha -->
+        <div class="container">
+          <div class="row row-50 flex-lg-row-reverse">
+            <div class="col-xl-4">
+              <ul class="list-lg"> 
+                <li>
+                  <p><img  src="images/eduacion3.jpg" alt="" class="imagen-animada" width="340" height="250" /></p>
+                      <BR>
+                      <BR>
+                    <p><img class="imagen-hover" src="images/eduacion1.jpg" alt=""  width="340" height="250"/></p>
+                 </li>
+              </ul>
+            </div>
+      <!-- contenido lateral derecho -->
+            <div class="col-xl-8">
+              <ul class="list-xl">
+                <li>
+                  <p>
                                 <h4>4. Multiplataforma</h4>
                                 Las aplicaciones multimedia deben ser capaces de funcionar correctamente en diferentes plataformas y dispositivos, ya
                                 sea un ordenador de escritorio, una tableta, un teléfono móvil o incluso en dispositivos de realidad virtual.
@@ -228,11 +251,31 @@
                                 <h5>Desarrollo:</h5> Los desarrolladores deben optar por tecnologías multiplataforma o crear versiones específicas
                                 de la aplicación para cada plataforma. Esto puede implicar el uso de frameworks como React Native, Flutter, o Unity para aplicaciones de juegos y multimedia.
                               </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                  <p>
+                   <h4>5. Usabilidad</h4>
+                    La facilidad de uso es fundamental. El diseño debe ser intuitivo, permitiendo que el usuario navegue por la aplicación sin dificultades. Una buena interfaz de usuario (UI) y una experiencia de usuario (UX) positiva son esenciales.
+                    <h5>Ejemplos:</h5> Botones grandes, navegación clara, diseño limpio y sin elementos confusos.                                      
+                    <h5>Desarrollo:</h5> Los desarrolladores deben aplicar principios de diseño de interfaces y realizar pruebas de usabilidad con usuarios reales para asegurarse de que la aplicación sea intuitiva.
+                  <p>
+                    <h4>2. Integración de múltiples tipos de medios</h4>
+                    Las aplicaciones multimedia combinan varios tipos de medios como texto, imágenes, audio, video y animación. El desarrollo debe permitir la integración fluida de estos medios.
+                    <h5>Ejemplos:</h5> Una aplicación educativa que utilice texto para instrucciones, imágenes para ilustraciones, videos para demostraciones y sonido para explicaciones.
+                    <h5>Desarrollo:</h5> Los desarrolladores deben utilizar tecnologías que soporten la integración de diferentes tipos de medios (HTML5, Flash, JavaScript, etc.). También es esencial gestionar la sincronización de los diferentes tipos de contenido para una experiencia coherente.
+                  </p>
+                  <p>
+                    <h4>6. Sincronización de medios</h4>
+Es importante que los diferentes tipos de contenido multimedia (texto, video, sonido, etc.) estén bien sincronizados para que la experiencia del usuario sea coherente y fluida.
+<h5>Ejemplos: </h5>En un tutorial en video, las explicaciones de texto deben coincidir con las imágenes o videos que se están mostrando.
+<h5>Desarrollo:</h5> Los desarrolladores deben asegurarse de que el tiempo de carga de los diferentes medios sea óptimo, y que el contenido se reproduzca de manera coordinada.
+                  </p>
+                </li>
+              </ul>
             </div>
+          </div>
+        </div>
+      </section> 
+
+      
             <div class="nav-buttons">
                 <a href="No.1.3.html"><button class="nav-btn">← Tema anterior</button></a>
                 <a href="temarioprueba.html"><button class="nav-btn">📘 Temario</button></a>
