--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -232,10 +232,24 @@
             <div class="col-xl-4">
               <ul class="list-lg"> 
                 <li>
-                  <p><img  src="images/eduacion3.jpg" alt="" class="imagen-animada" width="340" height="250" /></p>
+                  <p><img  src="images/caract_desa2.jpg" alt="" class="imagen-animada" width="340" height="250" /></p>
                       <BR>
                       <BR>
-                    <p><img class="imagen-hover" src="images/eduacion1.jpg" alt=""  width="340" height="250"/></p>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                    <p><img class="imagen-hover" src="images/caract_desa3.jpg" alt=""  width="340" height="250"/></p>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                    <p><img class="imagen-hover" src="images/caract_desa1.png" alt=""  width="340" height="250"/></p>                                        
                  </li>
               </ul>
             </div>
