--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -232,7 +232,7 @@
             <div class="col-xl-4">
               <ul class="list-lg"> 
                 <li>
-                  <p><img  src="images/caract_desa2.jpg" alt="" class="imagen-animada" width="340" height="250" /></p>
+                  <p><img  src="caract_desa2.jpg" alt="" class="imagen-animada" width="340" height="250" /></p>
                       <BR>
                       <BR>
                       <br>
@@ -241,7 +241,7 @@
                       <br>
                       <br>
                       <br>
-                    <p><img class="imagen-hover" src="images/caract_desa3.jpg" alt=""  width="340" height="250"/></p>
+                    <p><img class="imagen-hover" src="caract_desa3.jpg" alt=""  width="340" height="250"/></p>
                       <br>
                       <br>
                       <br>
@@ -249,7 +249,7 @@
                       <br>
                       <br>
                       <br>
-                    <p><img class="imagen-hover" src="images/caract_desa1.png" alt=""  width="340" height="250"/></p>                                        
+                    <p><img class="imagen-animada" src="caract_desa1.png" alt=""  width="340" height="250"/></p>                                        
                  </li>
               </ul>
             </div>
