--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -246,7 +246,9 @@
                       <br>
                       <br>
                       <br>
+                      <br>
                     <p><img class="imagen-hover" src="caract_desa3.jpg" alt=""  width="340" height="250"/></p>
+                      <br>
                       <br>
                       <br>
                       <br>
@@ -276,16 +278,17 @@
                     <h5>Ejemplos:</h5> Botones grandes, navegación clara, diseño limpio y sin elementos confusos.                                      
                     <h5>Desarrollo:</h5> Los desarrolladores deben aplicar principios de diseño de interfaces y realizar pruebas de usabilidad con usuarios reales para asegurarse de que la aplicación sea intuitiva.
                   <p>
-                    <h4>2. Integración de múltiples tipos de medios</h4>
-                    Las aplicaciones multimedia combinan varios tipos de medios como texto, imágenes, audio, video y animación. El desarrollo debe permitir la integración fluida de estos medios.
-                    <h5>Ejemplos:</h5> Una aplicación educativa que utilice texto para instrucciones, imágenes para ilustraciones, videos para demostraciones y sonido para explicaciones.
-                    <h5>Desarrollo:</h5> Los desarrolladores deben utilizar tecnologías que soporten la integración de diferentes tipos de medios (HTML5, Flash, JavaScript, etc.). También es esencial gestionar la sincronización de los diferentes tipos de contenido para una experiencia coherente.
-                  </p>
-                  <p>
                     <h4>6. Sincronización de medios</h4>
-Es importante que los diferentes tipos de contenido multimedia (texto, video, sonido, etc.) estén bien sincronizados para que la experiencia del usuario sea coherente y fluida.
-<h5>Ejemplos: </h5>En un tutorial en video, las explicaciones de texto deben coincidir con las imágenes o videos que se están mostrando.
-<h5>Desarrollo:</h5> Los desarrolladores deben asegurarse de que el tiempo de carga de los diferentes medios sea óptimo, y que el contenido se reproduzca de manera coordinada.
+                    Es importante que los diferentes tipos de contenido multimedia (texto, video, sonido, etc.) estén bien sincronizados para que la experiencia del usuario sea coherente y fluida.
+                    <h5>Ejemplos: </h5>En un tutorial en video, las explicaciones de texto deben coincidir con las imágenes o videos que se están mostrando.
+                    <h5>Desarrollo:</h5> Los desarrolladores deben asegurarse de que el tiempo de carga de los diferentes medios sea óptimo, y que el contenido se reproduzca de manera coordinada.
+                    <p>
+                      <h4>7. Rendimiento</h4>
+                      Las aplicaciones multimedia pueden ser exigentes en términos de recursos del sistema (procesador, memoria, ancho de banda). Por lo tanto, es esencial que el rendimiento de la aplicación 
+                      sea óptimo, incluso cuando se manejen archivos grandes como videos o gráficos de alta resolución.
+                      <h5>Ejemplos:</h5> Una aplicación de transmisión de video o una de videojuegos debe funcionar sin interrupciones, con una velocidad de carga rápida y una calidad de imagen consistente.
+                      <h5>Desarrollo:</h5> Optimización de recursos, compresión de medios y la utilización de técnicas de almacenamiento en caché son esenciales para mejorar el rendimiento.
+                    </p>
                   </p>
                 </li>
               </ul>
