--- a/No.1.3.2.html
+++ b/No.1.3.2.html
@@ -224,6 +224,15 @@
                                 <br>
                                 •	Dead zones: Zonas muertas en joysticks para evitar inputs no deseados.
                             </p>
+                          <p>
+                            <h4>Motor de Juego (Game Engine)</h4>
+                            El motor de juego es la base tecnológica que permite crear y gestionar los elementos de un videojuego, como los gráficos, la física, la inteligencia artificial (IA), las animaciones, la entrada del jugador y las interacciones en tiempo real.
+                            <h5>Funciones:</h5>
+                            <h5>Renderizado:</h5> Controla la representación visual del juego, desde los modelos 3D hasta las texturas y efectos especiales.
+                            <h5>Física:</h5> Calcula cómo se mueven los objetos y cómo interactúan entre sí según las leyes de la física (gravedad, fricción, colisiones, etc.).
+                            <h5>Sonido:</h5> Maneja la reproducción de efectos de sonido, música y voces en el juego.
+                            <h5>IA:</h5> Permite a los enemigos, personajes no jugables (NPCs) y el mundo en general reaccionar de manera autónoma e inteligente según las acciones del jugador.
+                          </p>
                         </li>
                     </ul>
                 </div>
@@ -304,8 +313,20 @@
                             <BR>
                             <BR>
                             <BR>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
                             <p><img class="imagen-zigzag" src="images/funcionamiento6.jpg" alt="" width="340" height="250" /></p>
-
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="mecajuegos1.gif" alt="" width="340" height="250" /></p>
                         </li>
                     </ul>
                 </div>
@@ -356,6 +377,30 @@
                                 <br>
                                 •	Rollback: Reconstrucción de estados pasados en caso de desincronización.
                             </p>
+                          <p>
+                            <h4>Entrada del Jugador (Interacción)</h4>
+                            La entrada del jugador se refiere a cómo el jugador interactúa con el videojuego, ya sea a través de un teclado, ratón, control de videojuegos, pantalla táctil, realidad virtual (VR), entre otros.
+                            <h5>Tipos de entrada:</h5>
+                            <h5>Teclado y ratón:</h5> Común en juegos de PC. El teclado se usa para mover al personaje, realizar acciones, y el ratón para apuntar o interactuar.
+                            <h5>Controles de consola:</h5> Un mando o control con botones físicos que se usan en consolas como PlayStation, Xbox, etc.
+                            <h5>Pantalla táctil:</h5> Usado en juegos móviles. El jugador interactúa tocando o deslizando sobre la pantalla.
+                            <h5>Realidad Virtual (VR):</h5> Los controles de VR permiten a los jugadores interactuar con el entorno del juego mediante movimientos físicos.
+                            <h4>Mecanismos:</h4>
+                            Los eventos de entrada (como presionar un botón o mover un joystick) se mapean a acciones dentro del juego (moverse, saltar, disparar).<br>
+                            El motor de juego procesa estas entradas y genera una respuesta en el juego (por ejemplo, un personaje se mueve o una animación se reproduce).
+                          </p>
+                          <p>
+                            <h4>Gráficos y Renderizado</h4>
+                            El renderizado es el proceso mediante el cual los gráficos 2D o 3D se crean a partir de modelos y texturas para mostrar una imagen en la
+                            pantalla del jugador. Este es uno de los mecanismos más importantes, ya que la experiencia visual en un videojuego es fundamental.
+                            <h4>Tipos de gráficos:</h4>
+                            <h5>Gráficos 2D:</h5> Son más simples y se utilizan en juegos como plataformas o juegos retro. Los objetos del juego se representan como imágenes bidimensionales.
+                            <h5>Gráficos 3D:</h5> Usados en la mayoría de los juegos modernos, crean un entorno tridimensional donde los personajes y objetos pueden moverse en 3 direcciones (X, Y, Z).
+                            <h4>Tecnologías de renderizado:</h4>
+                            <h5>Ray Tracing:</h5> Técnica avanzada que simula el comportamiento realista de la luz en un entorno, reflejando y refractando objetos y superficies.
+                            <h5>Shading:</h5> Añade efectos visuales como sombras, iluminaciones y texturas a los modelos 3D.
+
+                          </p>
                         </li>
                     </ul>
                 </div>
