--- a/No.1.3.2.html
+++ b/No.1.3.2.html
@@ -327,6 +327,16 @@
                             <br>
                             <br>
                             <p><img class="imagen-zigzag" src="mecajuegos1.gif" alt="" width="340" height="250" /></p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="mecajuegos2.gif" alt="" width="340" height="250" /></p>
                         </li>
                     </ul>
                 </div>
