--- a/No.2.2.html
+++ b/No.2.2.html
@@ -259,6 +259,46 @@
                 </div>
             </div>
         </div>
+        <!-- Base de imagenes lateral derecha -->
+        <div class="container">
+            <div class="row row-50 flex-lg-row-reverse">
+                <div class="col-xl-4">
+                    <ul class="list-lg">
+
+                        <li>
+                            <p><img src="tecweb.jpeg" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
+                            <BR>
+                            <BR>
+                            <BR>
+                            <BR>
+                            <p><img class="imagen-hover" src="tecweb1.gif" alt="" width="340" height="250" /></p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- contenido lateral derecho -->
+                <div class="col-xl-8">
+
+                    <ul class="list-xl">
+                        <li>
+                            <h1 class="h1fixed"></h1>
+                            <p>
+                              <h4>3. Protocolo HTTP/HTTPS</h4>
+                              <h5>HTTP (HyperText Transfer Protocol):</h5> Es el protocolo de comunicación que permite la transmisión de datos entre un cliente (navegador) y un servidor web.
+                              <h5>Función:</h5> Cuando un usuario solicita una página web, el navegador envía una solicitud HTTP al servidor, que responde enviando los datos necesarios para renderizar la página.
+                              <h5>HTTPS:</h5> Es la versión segura de HTTP. Usa SSL/TLS para cifrar los datos transmitidos, lo que mejora la seguridad, especialmente cuando se manejan datos sensibles como contraseñas o números de tarjetas bancarias.
+                            </p>
+                            <p>
+                              <h4>4. APIs (Application Programming Interfaces)</h4>
+                              Las APIs permiten que diferentes aplicaciones o servicios se comuniquen entre sí. En el contexto de la web, una API es una interfaz que permite que un sitio web o una aplicación consuma recursos o servicios externos.
+                              <h5>Propósito:</h5> Permiten la integración de servicios de terceros en un sitio web (por ejemplo, acceder a mapas, datos meteorológicos, servicios de pago, etc.).
+                              <h5>Ejemplo:</h5> Usar la API de Google Maps para mostrar mapas interactivos en un sitio web.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         </section>
         <div class="nav-buttons">
             <a href="No.2.1.4.html"><button class="nav-btn">← Tema anterior</button></a>
