--- a/No.2.2.html
+++ b/No.2.2.html
@@ -266,12 +266,12 @@
                     <ul class="list-lg">
 
                         <li>
-                            <p><img src="tecweb.jpeg" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
+                            <p><img src="tecweb1.jpeg" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
                             <BR>
                             <BR>
                             <BR>
                             <BR>
-                            <p><img class="imagen-hover" src="tecweb1.gif" alt="" width="340" height="250" /></p>
+                            <p><img class="imagen-hover" src="tecweb2.gif" alt="" width="340" height="250" /></p>
                         </li>
                     </ul>
                 </div>
