--- a/No.2.2.html
+++ b/No.2.2.html
@@ -235,6 +235,7 @@
 
                                 <strong>Bases de Datos:</strong>
                                 <br>
+                                Las bases de datos son sistemas utilizados para almacenar y gestionar grandes cantidades de datos de manera eficiente.
                                 <strong>SQL, NoSQL: </strong>Gestionan y almacenan datos que las aplicaciones web utilizan y procesan.
                                 <br><br>
                                 <strong>Frameworks y Librerías:</strong>
@@ -282,13 +283,13 @@
                         <li>
                             <h1 class="h1fixed"></h1>
                             <p>
-                              <h4>3. Protocolo HTTP/HTTPS</h4>
+                              <h4>Protocolo HTTP/HTTPS</h4>
                               <h5>HTTP (HyperText Transfer Protocol):</h5> Es el protocolo de comunicación que permite la transmisión de datos entre un cliente (navegador) y un servidor web.
                               <h5>Función:</h5> Cuando un usuario solicita una página web, el navegador envía una solicitud HTTP al servidor, que responde enviando los datos necesarios para renderizar la página.
                               <h5>HTTPS:</h5> Es la versión segura de HTTP. Usa SSL/TLS para cifrar los datos transmitidos, lo que mejora la seguridad, especialmente cuando se manejan datos sensibles como contraseñas o números de tarjetas bancarias.
                             </p>
                             <p>
-                              <h4>4. APIs (Application Programming Interfaces)</h4>
+                              <h4>APIs (Application Programming Interfaces)</h4>
                               Las APIs permiten que diferentes aplicaciones o servicios se comuniquen entre sí. En el contexto de la web, una API es una interfaz que permite que un sitio web o una aplicación consuma recursos o servicios externos.
                               <h5>Propósito:</h5> Permiten la integración de servicios de terceros en un sitio web (por ejemplo, acceder a mapas, datos meteorológicos, servicios de pago, etc.).
                               <h5>Ejemplo:</h5> Usar la API de Google Maps para mostrar mapas interactivos en un sitio web.
