--- a/No.2.2.1.html
+++ b/No.2.2.1.html
@@ -169,10 +169,21 @@
                         <li>
                             <p><img src="images/drive-download-20250414T215442Z-001/wp-what-is-a-content-management-system.jpg" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
                             <BR>
+                            <br>
+                            <br>
+                            <br>
                             <BR>
                             <BR>
                             <BR>
                             <p><img class="imagen-hover" src="images/drive-download-20250414T215442Z-001/tecnologias-desarrollo-web.jpg.jpg" alt="" width="340" height="250" /></p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <BR>  
+                            <p><img class="imagen-hover" src="cms1.gif" alt="" width="340" height="250" /></p>                          
                         </li>
                     </ul>
                 </div>
@@ -183,8 +194,22 @@
                         <li>
                             <h1 class="h1fixed"></h1>
                             <p>
-                                Los Sistemas de Gestión de Contenidos (CMS) es una aplicación de software que permite a los usuarios crear, gestionar y modificar contenido digital en un sitio web sin necesidad de conocimientos técnicos avanzados. Estos sistemas proporcionan interfaces intuitivas que separan el contenido de la presentación visual, facilitando el trabajo de redactores, diseñadores y desarrolladores. Según Gil Vera (2015), los CMS permiten "la creación, almacenamiento, modificación, recuperación y presentación de datos o contenido".
+                                Los Sistemas de Gestión de Contenidos (CMS) es una aplicación de software que permite a los usuarios crear, gestionar y modificar contenido
+                                digital en un sitio web sin necesidad de conocimientos técnicos avanzados. Estos sistemas proporcionan interfaces intuitivas que separan el 
+                              contenido de la presentación visual, facilitando el trabajo de redactores, diseñadores y desarrolladores. Según Gil Vera (2015), los CMS permiten 
+                              "la creación, almacenamiento, modificación, recuperación y presentación de datos o contenido".
                                 <br><br>
+                            </p>
+                          <p>
+                            <h4>Principales Características de un CMS:</h4>
+                            <h5>Interfaz Intuitiva:</h5> Muchos CMS tienen interfaces de usuario fáciles de usar, lo que permite que personas sin conocimientos técnicos puedan crear y gestionar contenido (por ejemplo, a través de un editor visual).
+                            <h5>Gestión de Contenidos:</h5> Permite crear y organizar contenido, como artículos, páginas, imágenes, videos, etc. Además, facilita la edición y publicación de contenido de manera rápida y eficiente.
+                            <h5>Plantillas y Diseño:</h5> Muchos CMS ofrecen plantillas prediseñadas que permiten cambiar el diseño de un sitio web sin necesidad de alterar el código subyacente. Los usuarios pueden elegir y personalizar el diseño a través de estas plantillas.
+                            <h5>SEO Integrado:</h5> Los CMS suelen incluir herramientas que facilitan la optimización para motores de búsqueda (SEO), como la edición de metadatos, URL amigables y generación de mapas de sitio.
+                            <h5>Gestión de Usuarios y Permisos:</h5> Un CMS permite la creación de múltiples usuarios con diferentes niveles de permisos, de manera que algunas personas solo puedan editar el contenido, mientras que otras pueden gestionar configuraciones avanzadas del sitio.
+                            <h5>Integración de Plugins:</h5> Los CMS permiten la integración de plugins o extensiones, que son pequeños programas que añaden funcionalidades adicionales (como formularios de contacto, herramientas de análisis, galerías de imágenes, etc.).
+                            <h5>Seguridad:</h5> Un CMS adecuado ofrece herramientas de seguridad para proteger el contenido del sitio y los datos del usuario. Esto incluye actualizaciones periódicas, contraseñas seguras y otras medidas de protección.
+                          </p><p>
                                 <h4>Beneficios de Implementar un CMS</h4>
                                 <br>
                                 <h5>La adopción de un CMS ofrece múltiples ventajas:</h5>
@@ -196,7 +221,6 @@
                                 <h5>Escalabilidad y Flexibilidad: </h5>La mayoría de los CMS son altamente escalables, permitiendo agregar nuevas funcionalidades a medida que crecen las necesidades del sitio.
                                 <br>
                                 <h5>Colaboración Mejorada: </h5>Facilitan la colaboración entre equipos, permitiendo que múltiples usuarios contribuyan y gestionen el contenido simultáneamente.
-
                             </p>
 
                         </li>
