--- a/No.2.2.1.html
+++ b/No.2.2.1.html
@@ -184,6 +184,15 @@
                             <br>
                             <BR>  
                             <p><img class="imagen-hover" src="cms1.gif" alt="" width="340" height="250" /></p>                          
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="cms2.webp" alt="" width="340" height="250" /></p>                            
                         </li>
                     </ul>
                 </div>
